--- a/{PluginID}.Core/{PluginID}.Core.csproj
+++ b/{PluginID}.Core/{PluginID}.Core.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>{PluginID}.Core</RootNamespace>
-    <AssemblyName>me.cqp.luohuaming.PLUGINNAME</AssemblyName>
+    <AssemblyName>{PluginID}</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
