添加热重载配置

--- a/{PluginID}.PublicInfos/{PluginID}.PublicInfos.csproj
+++ b/{PluginID}.PublicInfos/{PluginID}.PublicInfos.csproj
@@ -63,7 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonHelper.cs" />
-    <Compile Include="ConfigHelper.cs" />
+    <Compile Include="ConfigBase.cs" />
+    <Compile Include="AppConfig.cs" />
     <Compile Include="FunctionResult.cs" />
     <Compile Include="MainSave.cs" />
     <Compile Include="Models.cs" />
